--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #262626;
+    --background: #030712;
+    --foreground: #e5e7eb;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(var(--foreground));
   background: var(--background);
 }
 
