--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #030712;
-    --foreground: #e5e7eb;
+    --background: #0c0a09;
+    --foreground: #eee;
   }
 }
 
