--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,12 @@ body {
   --tweet-border: 1px solid #404040 !important;
   --tweet-bg-color-hover: #000 !important;
 }
+
+.popup {
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 999;
+}
