--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --background: white;
+  --background: #f5f5f4;
+  --foreground: #000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0c0a09;
-    --foreground: #eee;
+    --foreground: #fff;
   }
 }
 
